--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -223,13 +223,12 @@
                         <input asp-for="DepartmentId" hidden />
                         <div class="mb-3 form-group">
                             <select name="EmployeeId" id="EmployeeId" asp-items="@Model.Employees" class="form-control select2-style1 form-select">
-                                <option disabled selected value="0">-select owner-</option>
                             </select>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="btnSaveChanges" class="btn btn-primary">Save changes</button> <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+                    <button id="btnSaveChanges" class="btn btn-primary">Assign Owner</button> <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
