Bug fix in Employees DataTable

--- a/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
@@ -181,7 +181,7 @@
     <script>
         $(document).ready(function () {
             hideMenu();
-            makeDatatable('#tblEmployees', 1);
+            makeDataTable("#tblEmployees");
 
             // $('#tblEmployees').DataTable({
             //     language: {
