--- a/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model MODAMS.Models.SubCategory
+﻿@model MODAMS.Models.ViewModels.Dto.dtoSubCategory
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
