--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -39,7 +39,7 @@
             </a>
         </div>
     </div>
-    <div class="col-8 col-sm-9">
+    <div class="col-12 col-md-12">
         <div class="card">
             <div class="card-body project-list-table-container">
                 <div class="table-responsive">
